--- a/dotnet/aspnet/webapp/Application/azure-pipelines.yml
+++ b/dotnet/aspnet/webapp/Application/azure-pipelines.yml
@@ -18,6 +18,11 @@ steps:
 - task: NuGetToolInstaller@1
 
 - task: NuGetCommand@2
+- task: NuGetCommand@2
+  inputs:
+    command: 'restore'
+    restoreSolution: '**/*.sln'
+    feedsToUse: 'select'
   inputs:
     restoreSolution: '$(solution)'
 
