--- a/dotnet/aspnet/webapp/Application/azure-pipelines.yml
+++ b/dotnet/aspnet/webapp/Application/azure-pipelines.yml
@@ -15,9 +15,10 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
-- task: NuGetToolInstaller@1
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'build'
 
-- task: NuGetCommand@2
 - task: NuGetCommand@2
   inputs:
     command: 'restore'
